--- a/.github/workflows/function-deploy.yml
+++ b/.github/workflows/function-deploy.yml
@@ -4,7 +4,7 @@ on: workflow_dispatch
 
 env:
   PYTHON_VERSION: "3.8"
-  FUNCTION_APP: "dgeventdrivenfnceus2"
+  FUNCTION_APP: "susaneventdrivenfnceus2"
   FUNCTION_APP_PATH: "./functions"
   AZURE_SP_CREDENTIALS: ${{ secrets.AZURE_SP_CREDENTIALS }}
 
